--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Blog</title>
-        <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    </head>
+  <head>
+    <title>My Blog</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+  </head>
 
-    <body>
+  <body>
+    <header class="flexbox-header">
+      <h1 class="flexbox-header-item"><b>My Blog</b></h1>
+      <p class="flexbox-header-item">Welcome to the blog of unkown</p>
+    </header>
 
-        <header>
-            <h1><b>My Blog</b></h1>
-            <p>Welcome to my blog</p>
-            <nav>
-                <a href="projects.html">My Projects</a>
-                <a href="about.html">About Me</a>
-            </nav>
+    <main class="flexbox-container">
+        <section class="flexbox-container-item1">
+        <header class="">
+            <h3><b>TITLE HEADING</b></h3>
+            <h5>Title description, <span class="spanOpacityHalf">2022-04-28</span></h5>
         </header>
-        
-        <main>
+        <article class="">
+          <p>This is the second blog post in here</p>
+        </article>
+        <footer class="">
+          <a href="secondblogpost.html"><p><button class="btn btn1">Read More >></button></p></a>
+          <p><b>Comments </b><span class="spanCircle">0</span></p>
+        </footer>
+      </section>
 
-            <section>
-                <header>
-                    <h3><b>Blog posts</b></h3>
-                    <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
-                </header>
-                <article>
-                        <p>This is the first blog post in here</p>
-                </article>
-                <footer>
-                        <p><button class="button button1">READ MORE >></button></p>
-                        <p><b>Comments </b><span class="spanCircle">2</span></p>                         
-                </footer>
-            </section>
-            <section>
-                <header>
-                    <h2>Comments</h2>
-                </header>
-                <article>
-                    <div>
-                        <p>Comments goes here</p><br>
-                    </div>
-                    <form>
-                        <label for="Name">Name:</label><br>
-                        <input type="text" name="Name"/><br>
-                        <label for="emailAddress">Email address:</label><br>
-                        <input type="email" name="emailAddress"/><br>
-                        <input type="checkbox" name="checkbox1"> Check this<br>
-                        <input type="checkbox" name="checkbox1"> And this<br>
-                        <label for="txtNewComment">Comment blog post:</label> <br>
-                        <textarea class="txtNewComment" placeholder="Enter comment here" maxlength="294"></textarea> <br>
-                        <input class="button button1" type="submit" value="Submit">
-                    </form>
-                </article>
-            </section>
+      <section class="flexbox-container-item2">
+        <header class="">
+            <h3><b>About me</b></h3>
+            <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
+        </header>
+        <article class="">
+          <p>This is the first blog post in here</p>
+        </article>
+        <footer class="">
+            <a href="about.html"><p><button class="btn btn1">Read More >></button></p></a>
+          <p><b>Comments </b><span class="spanCircle">2</span></p>
+        </footer>
+      </section>
 
-        </main>
-
-    </body>
+      <section class="flexbox-container-item1">
+        <header class="">
+            <h3><b>BLOG ENTRY</b></h3>
+            <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
+        </header>
+        <article class="">
+          <p>This is the first blog post in here</p>
+        </article>
+        <footer class="">
+            <a href="firstblogpost.html"><p><button class="btn btn1">Read More >></button></p></a>
+          <p><b>Comments </b><span class="spanCircle">2</span></p>
+        </footer>
+      </section>
+    </main>
+  </body>
 </html>
