--- a/firstblogpost.html
+++ b/firstblogpost.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About</title>
+    <title>Blog Entry</title>
   </head>
   <body>
     <header>
-      <h1>About</h1>
+      <h1>Blog Entry</h1>
       <nav>
         <a href="index.html" class="btn btn1">Go Back</a>
       </nav>
