Worked with Flex

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p class="flexbox-header-item">Welcome to the blog of unkown</p>
     </header>
 
-    <main class="flexbox-container">
+    <main class="flexbox-container1">
         <section class="flexbox-container-item1">
         <header class="">
             <h3><b>TITLE HEADING</b></h3>
@@ -21,22 +21,20 @@
           <p>This is the second blog post in here</p>
         </article>
         <footer class="">
-          <a href="secondblogpost.html"><p><button class="btn btn1">Read More >></button></p></a>
+          <a href="secondblogpost.html"><button class="btn btn1">Read More >></button></a>
           <p><b>Comments </b><span class="spanCircle">0</span></p>
         </footer>
       </section>
-
+      
       <section class="flexbox-container-item2">
         <header class="">
             <h3><b>About me</b></h3>
-            <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
         </header>
         <article class="">
-          <p>This is the first blog post in here</p>
+          <p>Something about me</p>
         </article>
         <footer class="">
-            <a href="about.html"><p><button class="btn btn1">Read More >></button></p></a>
-          <p><b>Comments </b><span class="spanCircle">2</span></p>
+            <a href="about.html"><button class="btn btn1">About</button></a>
         </footer>
       </section>
 
@@ -49,7 +47,7 @@
           <p>This is the first blog post in here</p>
         </article>
         <footer class="">
-            <a href="firstblogpost.html"><p><button class="btn btn1">Read More >></button></p></a>
+            <a href="firstblogpost.html"><button class="btn btn1">Read More >></button></a>
           <p><b>Comments </b><span class="spanCircle">2</span></p>
         </footer>
       </section>
