--- a/firstblogpost.html
+++ b/firstblogpost.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Blog Entry</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Blog Entry</h1>
+    <header class="flexbox-header">
+      <h1 class="flexbox-header-item">Blog Entry</h1>
       <nav>
-        <a href="index.html" class="btn btn1">Go Back</a>
+        <a href="index.html"><button class="btn btn1">Back</button></a>
       </nav>
     </header>
   </body>
