--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <p class="flexbox-header-item">Welcome to the blog of unkown</p>
     </header>
 
-    <main class="flexbox-container1">
-        <section class="flexbox-container-item1">
+    <main class="flexbox-containerMain">
+      <div class="flexbox-containerBlogPosts">
+        <section class="flexbox-container-BlogItems">
         <header class="">
             <h3><b>TITLE HEADING</b></h3>
             <h5>Title description, <span class="spanOpacityHalf">2022-04-28</span></h5>
@@ -25,8 +26,25 @@
           <p><b>Comments </b><span class="spanCircle">0</span></p>
         </footer>
       </section>
+
+        <section class="flexbox-container-BlogItems">
+          <header class="">
+              <h3><b>BLOG ENTRY</b></h3>
+              <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
+          </header>
+          <article class="">
+            <p>This is the first blog post in here</p>
+          </article>
+          <footer class="">
+              <a href="firstblogpost.html"><button class="btn btn1">Read More >></button></a>
+            <p><b>Comments </b><span class="spanCircle">2</span></p>
+          </footer>
+        </section>
+        
+      </div>
       
-      <section class="flexbox-container-item2">
+    <div class="flexbox-containerSmall">
+      <section class="flexbox-container-SmallItem">
         <header class="">
             <h3><b>About me</b></h3>
         </header>
@@ -37,20 +55,8 @@
             <a href="about.html"><button class="btn btn1">About</button></a>
         </footer>
       </section>
+    </div>
 
-      <section class="flexbox-container-item1">
-        <header class="">
-            <h3><b>BLOG ENTRY</b></h3>
-            <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
-        </header>
-        <article class="">
-          <p>This is the first blog post in here</p>
-        </article>
-        <footer class="">
-            <a href="firstblogpost.html"><button class="btn btn1">Read More >></button></a>
-          <p><b>Comments </b><span class="spanCircle">2</span></p>
-        </footer>
-      </section>
     </main>
   </body>
 </html>
