--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <main class="flexbox-containerMain">
       <div class="flexbox-containerBlogPosts">
         <section class="flexbox-container-BlogItems">
-        <header class="">
+          <header class=>
             <h3><b>TITLE HEADING</b></h3>
             <h5>Title description, <span class="spanOpacityHalf">2022-04-28</span></h5>
-        </header>
-        <article class="">
-          <p>This is the second blog post in here</p>
-        </article>
-        <footer class="">
-          <a href="secondblogpost.html"><button class="btn btn1">Read More >></button></a>
-          <p><b>Comments </b><span class="spanCircle">0</span></p>
-        </footer>
+            </header>
+            <article class=>
+              <p>This is the second blog post in here</p>
+            </article>
+            <footer>
+              <a href="secondblogpost.html"><button class="btn btn1">Read More >></button></a>
+              <p><b>Comments </b><span class="spanCircle">0</span></p>
+            </footer>
       </section>
 
         <section class="flexbox-container-BlogItems">
