--- a/about.html
+++ b/about.html
@@ -5,11 +5,15 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
-    <header class="flexbox-header">
-      <h1 class="flexbox-header-item">About</h1>
-      <nav>
-        <a href="index.html"><button class="btn btn1">Back</button></a>
-      </nav>
-    </header>
+
+    <section> 
+      <header>
+        <h1>About</h1>      
+        <nav>
+          <a href="index.html"><button class="btn btn1">Back</button></a>
+        </nav>
+      </header>
+    </section>
+    
   </body>
 </html>
