--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       <p>Welcome to the blog of unknown</p>
     </header>
 
+<!-- Not sure if I have done the "sematiska elementen" correctly -->
+
     <main>
 
       <div>
-        
         <section>
           <header>
             <h2><b>BLOG ENTRY</b></h2>
@@ -53,7 +54,7 @@
           <p>Something about me</p>
         </article>
         <footer>
-          <a href="about.html"><button class="btn btn1">About</button></a>
+          <a href="about.html"><button class="btn btn1">About me</button></a>
         </footer>
       </section>
     </div>
