--- a/secondblogpost.html
+++ b/secondblogpost.html
@@ -14,7 +14,40 @@
         </nav>
       </header>
       <article>
-        <P>In here we talk a bit what the second blog entry is about.</P>
+        <p>Hotels that I have stayed at and how I liked them.</p>
+
+        <table class="tableStyle">
+          <tr>
+            <th>Country</th>
+            <th>City</th>
+            <th>Hotel</th>
+            <th>Rating</th>
+            <tr>
+              <td>Sweden</td>
+              <td>Karlstad</td>
+              <td>Best Hotel</td>
+              <td>4/5</td>
+            </tr>
+            <tr>
+              <td>Sweden</td>
+              <td>Falköping</td>
+              <td>Made-up Hotel</td>
+              <td>5/5</td>
+            </tr>
+            <tr>
+              <td>Denmark</td>
+              <td>Aarhus</td>
+              <td>Better Hotel</td>
+              <td>3/5</td>
+            </tr>
+            <tr>
+              <td>Norway</td>
+              <td>Oslo</td>
+              <td>Fake Hotel</td>
+              <td>1/5</td>
+            </tr>
+          </tr>
+        </table>
       </article>
       <aside>
         <h4>Comment section</h4>
