--- a/about.html
+++ b/about.html
@@ -13,6 +13,64 @@
           <a href="index.html"><button class="btn btn1">Back</button></a>
         </nav>
       </header>
+      <article>
+        <p>Here there should be something about me</p>
+        
+        <ul>
+          <li>Favorite Games</li>
+            <ol>
+              <li>Game 1</li>
+              <li>Game 2</li>
+              <li>Game 3</li>
+            </ol> <br>
+
+            <dl>
+              <dt>Game 1</dt>
+              <dd> Space Game</dd>
+              <dt>Game 2</dt>
+              <dd>Fantasy Game</dd>
+              <dt>Game 3</dt>
+              <dd>War Game</dd>
+            </dl> <br>
+
+          <li>Favorite Movies</li>
+          <ol>
+            <li>Movie 1</li>
+            <li>Movie 2</li>
+            <li>Movie 3</li>
+          </ol> <br>
+
+          <dl>
+            <dt>Movie 1</dt>
+            <dd>Science Fiction Movie</dd>
+            <dt>Movie 2</dt>
+            <dd>Comedy Movie</dd>
+            <dt>Movie 3</dt>
+            <dd>Action Movie</dd>
+          </dl> <br>
+
+          <li>Favorite Food</li>
+          <ol>
+            <li>Food 1</li>
+            <li>Food 2</li>
+            <li>Food 3</li>
+          </ol> <br>
+
+          <dl>
+            <dt>Food 1</dt>
+            <dd>Thai Food</dd>
+            <dt>Food 2</dt>
+            <dd>Indian food</dd>
+            <dt>Food 3</dt>
+            <dd>Swedish food</dd>
+          </dl> <br>
+
+        </ul>
+
+      </article>
+      <footer>
+        <a href="index.html"><button class="btn btn1">Back</button></a>
+      </footer>
     </section>
     
   </body>
