--- a/about.html
+++ b/about.html
@@ -4,16 +4,16 @@
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="backgroundSpace">
 
-    <section> 
-      <header>
-        <h1>About</h1>      
-        <nav>
-          <a href="index.html"><button class="btn btn1">Back</button></a>
-        </nav>
+    <section class="sectionBackgroundColor"> 
+      <header class="headerText headerBackground">
+        <h1>About</h1>
       </header>
-      <article>
+      <nav>
+        <a href="index.html"><button class="btn btn1">Back</button></a>
+      </nav>
+      <article class="textChildREM2">
         <p>Here there should be something about me</p>
         
         <ul>
