--- a/firstblogpost.html
+++ b/firstblogpost.html
@@ -4,15 +4,15 @@
     <title>Blog Entry</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="backgroundSpace">
 
-    <section>
-      <header>
+    <section class="sectionBackgroundColor">
+      <header class="headerText backgroundComet">
         <h1>Blog Entry</h1>
-        <nav>
-          <a href="index.html"><button class="btn btn1">Back</button></a>
-        </nav>
       </header>
+      <nav>
+        <a href="index.html"><button class="btn btn1">Back</button></a>
+      </nav>
       <article>
         <img class="blogImg" src="img/nasa.jpg" alt="Blog Picture">
         <h2>So what are we going to talk about</h2>
