--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <title>My Blog</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
-
-  <body>
-    <header>
-      <h1><b>My Blog</b></h1>
-      <p>Welcome to the blog of unknown</p>
-    </header>
+  <body class="backgroundSpace">
 
 <!-- Not sure if I have done the "sematiska elementen" correctly -->
 
-    <main>
+    <main class="sectionBackgroundColor">
 
-      <div>
-        <section>
+      <header class="headerText">
+        <h1><b>My Blog</b></h1>
+        <p>Welcome to the blog of unknown</p>
+      </header>
+
+      <div class="textParent1">
+        <section  class="textChild1">
           <header>
             <h2><b>BLOG ENTRY</b></h2>
             <h5>Title description, <span class="spanOpacityHalf">2022-04-25</span></h5>
           </header>
           <article>
-            <p>This is the first blog post in here</p>
+            <p>This is the first blog post</p>
           </article>
           <footer>
             <a href="firstblogpost.html"><button class="btn btn1">Read More >></button></a>
@@ -30,13 +30,13 @@
           </footer>
         </section>
 
-        <section>
+        <section class="textChild1">
           <header>
             <h2><b>TITLE HEADING</b></h2>
             <h5>Title description, <span class="spanOpacityHalf">2022-04-28</span></h5>
           </header>
           <article class=>
-            <p>This is the second blog post in here</p>
+            <p>This is the second blog post</p>
           </article>
           <footer>
             <a href="secondblogpost.html"><button class="btn btn1">Read More >></button></a>
@@ -45,7 +45,7 @@
       </section>
       </div>
       
-    <div>
+    <div class="textChildREM1">
       <section>
         <header>
           <h3><b>About me</b></h3>
