--- a/secondblogpost.html
+++ b/secondblogpost.html
@@ -4,15 +4,15 @@
     <title>Title Heading</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="backgroundSpace">
 
-    <section> 
-      <header>
-        <h1>Title Heading</h1>      
-        <nav>
-          <a href="index.html"><button class="btn btn1">Back</button></a>
-        </nav>
+    <section class="sectionBackgroundColor textSizeREM"> 
+      <header class="headerText textSizeEM">
+        <h1>Title Heading</h1>
       </header>
+      <nav>
+        <a href="index.html"><button class="btn btn1">Back</button></a>
+      </nav>
       <article>
         <p>Hotels that I have stayed at and how I liked them.</p>
 
