--- a/secondblogpost.html
+++ b/secondblogpost.html
@@ -6,8 +6,8 @@
   </head>
   <body class="backgroundSpace">
 
-    <section class="sectionBackgroundColor textSizeREM"> 
-      <header class="headerText textSizeEM">
+    <section class="sectionBackgroundColor">
+      <header class="headerText">
         <h1>Title Heading</h1>
       </header>
       <nav>
